# blockchain-simulator

./: .gitignore  Cargo.toml  README.md  blockchain.json
blockchain-simulator-frontend/: README.md  index.html  package-lock.json  package.json
blockchain-simulator-frontend/src/: App.vue
blockchain-simulator-frontend/src/components/: AddBlockForm.vue  BlockTable.vue  MiningChart.vue
blockchain-simulator-frontend/src/styles/: main.css
src/: block.rs  blockchain.rs  main.rs
